<resources>
    <string name="app_name">FirebaseKotlin</string>
    <string name="iniciar_sesi_n_con_correo_y_contrase_a">Iniciar Sesión con Correo y Contraseña</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="crear_cuenta"><u>Crear Cuenta</u></string>
    <string name="cambiar_contrase_a"><u>Cambiar Contraseña</u></string>
    <string name="recuperar_contrasena"><u>Recuperar Contraseña</u></string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="crear">Crear</string>
    <string name="hubo_error">Hubo un error</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="error_correo_verificacion">Error al enviar correo de verificación</string>
    <string name="correo_verificacion_enviado">Correo de verificación enviado</string>
    <string name="ingresar_correo_contrasena">Ingresar correo y contraseña.</string>
    <string name="error_iniciar_sesion">Error al iniciar sesión.</string>
    <string name="correo_recuperar_contrasena_enviado">Se ha enviado un correo para recuperar su contraseña.</string>
    <string name="error_enviar_correo">Hubo un error al enviar el correo.</string>
    <string name="nueva_contrasena">Nueva Contraseña</string>
    <string name="contrasena_cambiada">Contraseña cambiada.</string>
    <string name="error_cambiar_contrasena">Hubo un error al cambiar su contraseña.</string>
    <string name="error_reautenticacion">Error al reautenticar usuario.</string>
    <string name="opciones_iniciar_sesion">Otras Opciones para Iniciar Sesión</string>
    <string name="default_cliente_web_id">757257252338-t3fjrvlpoun42u8ncopv09inmr899ng5.apps.googleusercontent.com</string>
    <string name="error_iniciar_sesion_google">Hubo un error al iniciar sesión con Google.</string>
    <string name="error_inicio_sesion_google">Error al iniciar sesión con Google.</string>
    <string name="facebook_app_id">1610618632319643</string>
    <string name="inicio_sesion_fb_cancelado">Se ha cancelado el de sesión con Facebook.</string>
    <string name="error_inicio_sesion_fb">Error al iniciar sesión con Facebook.</string>
    <string name="error_facebook_firebase">Hubo un error al iniciar sesión con Facebook en Firebase.</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">lR8Ec1njnXADIdVrduJH1hX2i</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">roPMbuCsPlXCjseQZKDhuXWbmceIEi7yjm53gF4ZEgPHa39kq2</string>
    <string name="error_sesion_twitter">Hubo un error al iniciar sesión con Twitter</string>
    <string name="numero_telefonico">Número Telefónico</string>
    <string name="enviar_codigo">Enviar Código</string>
    <string name="codigo_verificacion">Código de Verificación</string>
    <string name="iniciar_sesion_telefono">Iniciar Sesión con Número Telefónico</string>
    <string name="codigo_verificacion_enviado">Se ha enviado el código de verificación.</string>
    <string name="numero_incorrecto">Número telefónico incorrecto.</string>
    <string name="verificaciones_excedidas">Número de verificaciones excedidas.</string>
    <string name="error_verificacion">Hubo un error en la verificación.</string>
    <string name="usuario_anonimo">Usuario anónimo.</string>
    <string name="sesion_anonima_iniciada">Sesión anónima iniciada.</string>
    <string name="error_sesion_anonima">Hubo un error al iniciar sesión anónima.</string>
    <string name="autenticacion_anonima_enlace_cuentas">Autenticación Anónima y Enlace de Cuentas</string>
    <string name="evento_compra">Enviar Evento de Compra</string>
    <string name="analytics">Analytics</string>
    <string name="evento_propio">Evento Propio</string>
    <string name="enviar_grupo">Enviar Grupo</string>
    <string name="notificacion_id_default">canal_notificacion_id</string>
    <string name="notificaciones_noticias">Noticias</string>
    <string name="notificacion_deportes">Deportes</string>
    <string name="notificacion_entretenimiento">Entretenimiento</string>
    <string name="opciones_notificaciones">Opciones de Notificaciones</string>
    <string name="almacenamiento">Almacenamiento</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="guardar_imagen">Guardar Imagen</string>
    <string name="descargar_imagen">Descargar Imagen</string>
    <string name="error_descarga_imagen">Error al descargar la imagen.</string>
    <string name="eliminar_imagen">Eliminar Imagen</string>
    <string name="imagen_eliminada">La imagen se ha eliminado.</string>
    <string name="error_eliminar_imagen">Hubo un error al eliminar la imagen.</string>
    <string name="base_de_datos">Base de datos</string>
    <string name="hint_titulo_nota">Título</string>
    <string name="contenido_nota">Contenido de la Nota</string>
    <string name="autor_nota">Autor</string>
    <string name="hint_comentario">Comentario</string>
    <string name="comentar">Comentar</string>
    <string name="comentario_ejemplo">Este es un comentario</string>
    <string name="usuario_inexistente">Usuario inexistente.</string>
    <string name="generar_crash">Generar un Crash</string>
    <string name="compartir">Compartir</string>
    <string name="enviar_invitacion">Enviar Invitación</string>
    <string name="mostrar_anuncio_intersticial">Mostrar Anuncio Intersticial</string>
    <string name="mostrar_video_anuncio">Mostrar Video Anuncio</string>
</resources>
