<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_normal"
    tools:context="com.warriorminds.firebasekotlin.ActividadPrincipal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/botonAutenticarCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iniciar_sesi_n_con_correo_y_contrase_a"/>

            <Button
                android:id="@+id/botonIniciarSesionProveedores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opciones_iniciar_sesion"/>

            <Button
                android:id="@+id/botonIniciarSesionTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iniciar_sesion_telefono"/>

            <Button
                android:id="@+id/botonIniciarAutenticacionAnonima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/autenticacion_anonima_enlace_cuentas"/>

            <Button
                android:id="@+id/botonAnalytics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/analytics"/>

            <Button
                android:id="@+id/botonNotificaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opciones_notificaciones"/>

            <Button
                android:id="@+id/botonAlmacenamiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/almacenamiento"/>

            <Button
                android:id="@+id/botonBaseDatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/base_de_datos"/>

            <Button
                android:id="@+id/botonCrash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generar_crash"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
